--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -658,44 +658,42 @@
 #: dull and bright version. You can also set the remaining colors from
 #: the 256 color table as color16 to color255.
 
-! special
-*.foreground:   #a6a28c
-*.background:   #20201d
-*.cursorColor:  #a6a28c
+# special
+foreground   #edf1f2
+background   #1c2023
+cursorColor  #b9b9b9
 
-! black
-*.color0:       #20201d
-*.color8:       #7d7a68
+# black
+color0       #101010
+color8       #525252
 
-! red
-*.color1:       #d73737
-*.color9:       #d73737
+# red
+color1       #7c7c7c
+color9       #7c7c7c
 
-! green
-*.color2:       #60ac39
-*.color10:      #60ac39
+# green
+color2       #8e8e8e
+color10      #8e8e8e
 
-! yellow
-*.color3:       #cfb017
-*.color11:      #cfb017
+# yellow
+color3       #a0a0a0
+color11      #a0a0a0
 
-! blue
-*.color4:       #6684e1
-*.color12:      #6684e1
+# blue
+color4       #686868
+color12      #686868
 
-! magenta
-*.color5:       #b854d4
-*.color13:      #b854d4
+# magenta
+color5       #747474
+color13      #747474
 
-! cyan
-*.color6:       #1fad83
-*.color14:      #1fad83
+# cyan
+color6       #868686
+color14      #868686
 
-! white
-*.color7:       #a6a28c
-*.color15:      #fefbec
-
-
+# white
+color7       #b9b9b9
+color15      #f7f7f7
 
 
 #: old scheme
